--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="buttons">
       <div class="float_button">
-        <%= form_tag(url_for(:controller=>:Welcome, :action=>:index)) do %>
+        <%= form_tag(url_for(:controller=>:welcome, :action=>:index)) do %>
             <%= button_tag('Status aktuell' ) %>
         <% end %>
       </div>
