--- a/app/views/auswertung/show_statistik.html.erb
+++ b/app/views/auswertung/show_statistik.html.erb
@@ -1,6 +1,6 @@
 <div class="page">
   <div style="float: left">
-    <h3>Statitsitsche Auswertung Temperaturverlauf</h3>
+    <h3>Statistische Auswertung Temperaturverlauf</h3>
     Größere Zeiträume können durchaus länger brauchen für Aufbereitung der Anzeige<br><br>
 
     <%= form_tag url_for(:action=>:list_statistik) do %>
