--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
 
 
 
-<div class="page">
+<div class="page" style="font-size:larger">
   <% if @temperatur.nil? %>
       <h3>Willkommen bei Pool-Steuerung mit Raspberry Pi</h3>
       Nach Beginn der Temperaturerfassung wird hier der aktuelle Status angezeigt
