--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@
  */
 
 
-body {
+.rotsidan {
     background-image: url(Rotsidan.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
