--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
 </head>
-<body>
+<body class="rotsidan">
     <div class="head">
       <h2 align="center"><br><br>Pool-Temperatursteuerung mit Raspberry Pi</h2>
     </div>
