--- a/app/views/welcome/watch.html.erb
+++ b/app/views/welcome/watch.html.erb
@@ -1,9 +1,9 @@
-<div style="font-size: 600%; padding-left: 10px;">
+<div style="font-size: 600%; padding-left: 10px; text-align: center">
   <% if @temperatur.nil? %>
     Nach Beginn der Temperaturerfassung wird hier der aktuelle Status angezeigt
   <% else %>
-    <b style="text-align: center">Pool <%= @temperatur.created_at.strftime('%H:%M:%S') %></b>
-    <table style="border: 1px; width: 100%;">
+    <b >Pool <%= @temperatur.created_at.strftime('%H:%M:%S') %></b>
+    <table style="width: 100%;">
       <tr>
         <td>Sonne</td>
         <td style="text-align: right"><%=  @temperatur.Sonne.round(1) %></td>
