--- a/app/views/welcome/watch.html.erb
+++ b/app/views/welcome/watch.html.erb
@@ -1,4 +1,4 @@
-<div style="font-size: 600%; padding-left: 20px; padding-right: 20px;">
+<div style="font-size: 550%; padding-left: 20px; padding-right: 20px;">
   <% if @temperatur.nil? %>
     Nach Beginn der Temperaturerfassung wird hier der aktuelle Status angezeigt
   <% else %>
@@ -31,10 +31,10 @@
         <td><%= @temperatur.Pumpenstatus == 0 ? 'AUS' : 'AN' %></td>
       </tr>
       <tr>
-        <td colspan="2"><%= @temperatur.pumpe_an_grund %></td>
+        <td colspan="2" style="text-align: center"><%= @temperatur.pumpe_an_grund %></td>
       </tr>
       <tr>
-        <td colspan="2"><%= @konfiguration.modus_text %></td>
+        <td colspan="2" style="text-align: center"><%= @konfiguration.modus_text %></td>
       </tr>
     </table>
   <% end %>
